--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 </head>
 <body>
 
-<header>
-    <h1>The Illusion of Perception:<br> Exploring the World of Optical Illusions</h1>
-</header>
+    <header>
+        <h1>The Illusion of Perception: Exploring the World of Optical Illusions</h1>
+        <nav> 
+            <ul>
+                <li><a href="#intro">Introduction</a></li>
+                <li><a href="#motion">Illusions of Motion</a></li>
+                <li><a href="#depth">Illusion of Motion Binding</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <main>
     <article id="intro">
